feat(notesbook): completed integration & few other improvements: success messages and components

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,7 @@
-
-<router-outlet></router-outlet>
-<app-notification></app-notification>
+<app-sidebar></app-sidebar>
+    <div class="main-content">
+      <app-navbar></app-navbar>
+      <router-outlet></router-outlet>
+      <app-notification></app-notification>
+    </div>
+    <app-theme-toggle></app-theme-toggle>
