--- a/frontend/src/app/components/note-edit/note-edit.component.html
+++ b/frontend/src/app/components/note-edit/note-edit.component.html
@@ -1,14 +1,22 @@
-<div>
+<div class="note-edit-container">
   <form [formGroup]="noteForm" (ngSubmit)="onSubmit()">
-    <div>
+    <div class="form-group">
       <label for="title">Title</label>
       <input id="title" formControlName="title">
+      <div *ngIf="noteForm.controls['title'].invalid && (noteForm.controls['title'].dirty || noteForm.controls['title'].touched)" class="error-message">
+        Text needed here
+      </div>
     </div>
-    <div>
+    <div class="form-group">
       <label for="content">Content</label>
       <textarea id="content" formControlName="content"></textarea>
+      <div *ngIf="noteForm.controls['content'].invalid && (noteForm.controls['content'].dirty || noteForm.controls['content'].touched)" class="error-message">
+        Text needed here
+      </div>
     </div>
-    <button type="submit">{{ isEditMode ? 'Update' : 'Create' }} Note</button>
-    <button routerLink="/">Cancel</button>
+    <div class="form-actions">
+      <button type="submit" [disabled]="noteForm.invalid">{{ isEditMode ? 'Update' : 'Create' }} Note</button>
+      <button type="button" (click)="backToList()">Cancel</button>
+    </div>
   </form>
 </div>
